--- a/package.json
+++ b/package.json
@@ -25,12 +25,14 @@
     "@grpc/proto-loader": "^0.5.5",
     "debug": "^4.3.1",
     "dotenv": "^8.2.0",
-    "google-protobuf": "^3.14.0"
+    "google-protobuf": "^3.14.0",
+    "lodash": "^4.17.20"
   },
   "devDependencies": {
     "@types/debug": "^4.1.5",
     "@types/dotenv": "^8.2.0",
     "@types/google-protobuf": "^3.7.4",
+    "@types/lodash": "^4.14.165",
     "@types/node": "^14.14.9",
     "grpc-tools": "^1.10.0",
     "grpc_tools_node_protoc_ts": "^5.0.1",
